@@ -22,7 +22,6 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 #include "client.h"
 
-
 extern	struct model_s	*cl_mod_powerscreen;
 
 int32_t vidref_val;
