@@ -18,12 +18,40 @@ along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
 
 */
+#include "client.h"
 
-// If we need it anywhere else we can move it
-#define STR_HELPER(x) #x
-#define STR(x) STR_HELPER(x)
+int32_t intro_start_time = 0;
+bool	intro_running;
 
-#define ZOMBONO_VERSION_MAJOR 0
-#define ZOMBONO_VERSION_MINOR 0
-#define ZOMBONO_VERSION_REVISION 9
-#define ZOMBONO_VERSION_BUILD 410
+void Intro_Start()
+{
+	intro_running = true; 
+
+	intro_start_time = Sys_Milliseconds();
+}
+
+void Intro_Update()
+{
+	if (!intro_running)
+		return;
+
+	int32_t current_time = Sys_Milliseconds();
+	int32_t end_time = intro_start_time + cl_intro1_time->value + cl_intro2_time->value;
+	
+	// end the intro if we reached the end time
+	if (current_time > end_time)
+		intro_running = false;
+
+	// todo: fade
+
+	// show first image
+	if ((current_time - intro_start_time) <= cl_intro1_time->value)
+	{
+		re.DrawPicStretch(0, 0, viddef.width, viddef.height, cl_intro1->string);
+	}
+	else // show second image
+	{
+		re.DrawPicStretch(0, 0, viddef.width, viddef.height, cl_intro2->string);
+	}
+}
+
