@@ -123,7 +123,7 @@ typedef struct refdef_s
 	particle_t*		particles;
 } refdef_t;
 
-#define	API_VERSION		8
+#define	API_VERSION		9
 
 //
 // these are the functions exported by the refresh module
@@ -163,10 +163,11 @@ typedef struct refexport_s
 	void	(*DrawGetPicSize) (int32_t *w, int32_t *h, char *name);	// will return 0 0 if not found
 	void	(*DrawPic) (int32_t x, int32_t y, char *name);
 	void	(*LoadPic) (char* name);
-	void	(*DrawStretchPic) (int32_t x, int32_t y, int32_t w, int32_t h, char *name);
+	void	(*DrawPicStretch) (int32_t x, int32_t y, int32_t w, int32_t h, char *name);
 	void	(*DrawTileClear) (int32_t x, int32_t y, int32_t w, int32_t h, char *name);
 	void	(*DrawFill) (int32_t x, int32_t y, int32_t w, int32_t h, int32_t r, int32_t g, int32_t b, int32_t a);
-	void	(*DrawPicRegion)(int32_t x, int32_t y, int32_t start_x, int32_t start_y, int32_t end_x, int32_t end_y, char* pic, float color[4]);
+	void	(*DrawPicRegion)(int32_t x, int32_t y, int32_t start_x, int32_t start_y, int32_t end_x, int32_t end_y, char* pic, vec4_t color);
+
 	void	(*DrawFadeScreen) ();
 	/*
 	** video mode and refresh state management entry points
@@ -222,7 +223,7 @@ typedef struct
 
 	bool	(*Vid_GetModeInfo)( int32_t *width, int32_t *height, int32_t mode );
 	void	(*Vid_MenuInit)( void );
-	void	(*Vid_NewWindow)( int32_t width, int32_t height );
+	void	(*Vid_ChangeResolution)( int32_t width, int32_t height );
 } refimport_t;
 
 
